# MarketXray

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .gitignore  BUGS.md  CMakeLists.txt  README.md  Rust_SHM_Bridge.md  VISUALIZATION_PLAN.md  backend_vs_frontend_data.md  cpp_errors.md
backend/rust_ingestor/: Cargo.toml
backend/rust_ingestor/src/: main.rs
backend/src/: AnalyticsEngine.hpp  EngineLoop.hpp  Exporter.hpp  GraphAlgos.hpp  HawkesPIN.hpp  LimitOrderBook.hpp  MemoryPool.hpp  SPSCQueue.hpp  SharedMemory.hpp  Types.hpp  WebSocketServer.hpp  main.cpp  main_ws.cpp
backend/tests/: engine_regression_tests.cpp
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  feed.ts  hooks.ts  sim.ts  styles.css  sync.tsx  types.ts
frontend/src/components/: DepthCommandCenter.tsx  DepthSurface3D.tsx  KpiStrip.tsx  LiquidityHeatmap.tsx  MarketImpact.tsx  MarketScanner.tsx  OFIPriceChart.tsx  SpoofingScatter.tsx  StatusBar.tsx  TopBar.tsx
